Update 2. JSON Syntax.md

--- a/JSON/2. JSON Syntax.md
+++ b/JSON/2. JSON Syntax.md
@@ -6,3 +6,10 @@ Cú pháp JSON có nguồn gốc từ cú pháp ký hiệu đối tượng JavaS
 - Dữ liệu được phân tách bằng dấu phẩy 
 - `{}` là đối tượng
 - `[]` là mảng
+
+## JSON Data - A Name and a Value
+Dữ liệu JSON được viết dưới dạng cặp name/value.
+Một cặp name/value bao gồm một tên trường (trong dấu ngoặc kép), theo sau là dấu hai chấm, theo sau là một giá trị:
+```javascript
+"name":"John"
+```
