Update 2. JSON Syntax.md

--- a/JSON/2. JSON Syntax.md
+++ b/JSON/2. JSON Syntax.md
@@ -9,7 +9,18 @@ Cú pháp JSON có nguồn gốc từ cú pháp ký hiệu đối tượng JavaS
 
 ## JSON Data - A Name and a Value
 Dữ liệu JSON được viết dưới dạng cặp name/value.
+
 Một cặp name/value bao gồm một tên trường (trong dấu ngoặc kép), theo sau là dấu hai chấm, theo sau là một giá trị:
+
 ```javascript
 "name":"John"
+```
+
+## JSON Object
+Khi cặp name/value được giữ bởi cặp dấu `{}` thì ta có thể xem đó là một Object
+- name: là thuộc tính
+- value: là giá trị
+
+```javascript
+{ "name":"John" }
 ```
