Update 2. JSON Syntax.md

--- a/JSON/2. JSON Syntax.md
+++ b/JSON/2. JSON Syntax.md
@@ -16,6 +16,16 @@ Một cặp name/value bao gồm một tên trường (trong dấu ngoặc kép)
 "name":"John"
 ```
 
+## JSON Values
+Trong JSON, các giá trị phải là một trong các loại dữ liệu sau:
+
+- a string
+- a number
+- an object (JSON object)
+- an array
+- a boolean
+- null
+
 ## JSON Object
 Khi cặp name/value được giữ bởi cặp dấu `{}` thì ta có thể xem đó là một Object
 - name: là thuộc tính
@@ -24,3 +34,17 @@ Khi cặp name/value được giữ bởi cặp dấu `{}` thì ta có thể xem
 ```javascript
 { "name":"John" }
 ```
+
+## JSON Arrays
+Khi cặp nhiều đối tượng được giữ bởi cặp dấu `[]` thì ta có thể xem đó là một mảng Object
+
+```javascript
+[{
+	"name": "John"
+}, {
+	"name": "Emyli"
+}, {
+	"name": "Sun"
+}]
+```
+
