Update 2. JSON Syntax.md

--- a/JSON/2. JSON Syntax.md
+++ b/JSON/2. JSON Syntax.md
@@ -40,11 +40,34 @@ Khi cặp nhiều đối tượng được giữ bởi cặp dấu `[]` thì ta 
 
 ```javascript
 [{
-	"name": "John"
+    "name": "John"
 }, {
-	"name": "Emyli"
+    "name": "Emyli"
 }, {
-	"name": "Sun"
+    "name": "Sun"
+}]
+```
+
+## Example
+Ví dụ về một mảng `Student` với 3 thuộc tính:
+- rollNumber
+- name
+- mark
+
+```json
+[{
+    "rollNumber": "04455",
+    "name": "Thanh Thanh",
+    "mark": 9
+
+}, {
+    "rollNumber": "04456",
+    "name": "Viet",
+    "mark": 6
+}, {
+    "rollNumber": "04457",
+    "name": "Tuan",
+    "mark": 7.7
 }]
 ```
 
