Update 2. JSON Syntax.md

--- a/JSON/2. JSON Syntax.md
+++ b/JSON/2. JSON Syntax.md
@@ -31,20 +31,20 @@ Khi cặp name/value được giữ bởi cặp dấu `{}` thì ta có thể xem
 - name: là thuộc tính
 - value: là giá trị
 
-```javascript
-{ "name":"John" }
+```json
+{ "name":"Tuan Anh" }
 ```
 
 ## JSON Arrays
 Khi cặp nhiều đối tượng được giữ bởi cặp dấu `[]` thì ta có thể xem đó là một mảng Object
 
-```javascript
+```json
 [{
-    "name": "John"
+    "name": "Tuan Anh"
 }, {
-    "name": "Emyli"
+    "name": "Thanh Thanh"
 }, {
-    "name": "Sun"
+    "name": "Tuan"
 }]
 ```
 
