Update 2. JSON Syntax.md

--- a/JSON/2. JSON Syntax.md
+++ b/JSON/2. JSON Syntax.md
@@ -12,7 +12,7 @@ Dữ liệu JSON được viết dưới dạng cặp name/value.
 
 Một cặp name/value bao gồm một tên trường (trong dấu ngoặc kép), theo sau là dấu hai chấm, theo sau là một giá trị:
 
-```javascript
+```json
 "name":"John"
 ```
 
