Update 3. JSON Data Types.md

--- a/JSON/3. JSON Data Types.md
+++ b/JSON/3. JSON Data Types.md
@@ -12,3 +12,40 @@ Trong JSON, các giá trị phải là một trong các loại dữ liệu sau:
 
 ## JSON Strings
 Các chuỗi trong JSON phải được viết bằng dấu ngoặc kép.
+```json
+{ "name" : "Tuan Anh" }
+```
+
+## JSON Numbers
+Các số trong JSON phải là số nguyên hoặc số thực.
+```json
+{ "age" : 25 }
+```
+
+## JSON Objects
+Value của JSON có thể là một Object
+```json
+{
+"student" : { "name":"Tuan Anh", "age":25, "city":"Ha Noi" }
+}
+```
+
+## JSON Arrays
+Value của JSON có thể là một Array
+```json
+{
+"students" : [ "Tuan Anh", "Thanh Thanh", "Tuan" ]
+}
+```
+
+## JSON Booleans
+Value của JSON có thể là một true/false
+```json
+{ "gender" : true }
+```
+
+## JSON null
+Value của JSON có thể 
+```json
+{ "gender" : null }
+```
