Update 3. JSON Data Types.md

--- a/JSON/3. JSON Data Types.md
+++ b/JSON/3. JSON Data Types.md
@@ -49,3 +49,24 @@ Value của JSON có thể
 ```json
 { "gender" : null }
 ```
+
+## Example
+```json
+{ 
+    "rollNumber" : "SE04455",
+    "name" : {
+        "firstName" : "Dinh",
+        "lastName" : "Tuan Anh"
+    },
+    "mark" : [
+        {
+            "math" : 8
+        }, {
+            "physics" : 7.5
+        }, {
+            "chemistry" : 7.7
+        }
+    ],
+    "gender" : "male"
+}
+```
