Update 3. JSON Data Types.md

--- a/JSON/3. JSON Data Types.md
+++ b/JSON/3. JSON Data Types.md
@@ -58,6 +58,7 @@ Value của JSON có thể
         "firstName" : "Dinh",
         "lastName" : "Tuan Anh"
     },
+    "isSoftwareEngineer" : true,
     "mark" : [
         {
             "math" : 8
@@ -67,6 +68,7 @@ Value của JSON có thể
             "chemistry" : 7.7
         }
     ],
-    "gender" : "male"
+    "gender" : "male",
+    "address" : null
 }
 ```
