Update 3. JSON Data Types.md

--- a/JSON/3. JSON Data Types.md
+++ b/JSON/3. JSON Data Types.md
@@ -54,7 +54,7 @@ Value của JSON có thể
 ```json
 { 
     "rollNumber" : "SE04455",
-    "name" : {
+    "fullame" : {
         "firstName" : "Dinh",
         "lastName" : "Tuan Anh"
     },
