Update 3. JSON Data Types.md

--- a/JSON/3. JSON Data Types.md
+++ b/JSON/3. JSON Data Types.md
@@ -25,17 +25,13 @@ Các số trong JSON phải là số nguyên hoặc số thực.
 ## JSON Objects
 Value của JSON có thể là một Object
 ```json
-{
-"student" : { "name":"Tuan Anh", "age":25, "city":"Ha Noi" }
-}
+{"student" : { "name":"Tuan Anh", "age":25, "city":"Ha Noi" }}
 ```
 
 ## JSON Arrays
 Value của JSON có thể là một Array
 ```json
-{
-"students" : [ "Tuan Anh", "Thanh Thanh", "Tuan" ]
-}
+{"students" : [ "Tuan Anh", "Thanh Thanh", "Tuan" ]}
 ```
 
 ## JSON Booleans
